[package]
name = "script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accurate = { version = "0.4.1", default-features = false }
clap = { version = "4.5.16", features = ["derive", "cargo"] }
gkquad = { version = "0.0.4", default-features = false }
libm = "0.2.8"
rayon = "1.10.0"
splines = "4.3.1"
statrs = "0.17.1"
